fixed where modal not closing on certain area. added z-index

--- a/components/note/note.module.css
+++ b/components/note/note.module.css
@@ -18,4 +18,5 @@
   left: 0;
   width: 100vw;
   height: 100vh;
+  z-index: 50;
 }
